Better datepicker + change ViewVehicleActivity UI

--- a/app/src/main/res/layout/activity_view_vehicle.xml
+++ b/app/src/main/res/layout/activity_view_vehicle.xml
@@ -32,7 +32,7 @@
                 android:layout_height="@dimen/img_size" />
 
             <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
+                android:id="@+id/toolbar_view_vehicle"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
