--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,55 @@
     <color name="colorSecondaryText">#757575</color>
     <color name="colorDivider">#BDBDBD</color>
 
+    <!--ColorPicker primary colors-->
+    <color name="red">#F44336</color>
+    <color name="pink">#E91E63</color>
+    <color name="purple">#9C27B0</color>
+    <color name="blue">#2196F3</color>
+    <color name="green">#4CAF50</color>
+    <color name="yellow">#FFEB3B</color>
+    <color name="orange">#FF9800</color>
+    <color name="brown">#795548</color>
+    <color name="grey">#9E9E9E</color>
+    <color name="black">#000000</color>
+    <array name="vehicles_primary_colors">
+        <item>@color/colorTextIcons</item>
+        <item>@color/red</item>
+        <item>@color/pink</item>
+        <item>@color/purple</item>
+        <item>@color/blue</item>
+        <item>@color/green</item>
+        <item>@color/yellow</item>
+        <item>@color/orange</item>
+        <item>@color/brown</item>
+        <item>@color/grey</item>
+        <item>@color/black</item>
+    </array>
+
+    <!--ColorPicker colors dark-->
+    <color name="red_dark">#B71C1C</color>
+    <color name="pink_dark">#880E4F</color>
+    <color name="purple_dark">#4A148C</color>
+    <color name="blue_dark">#0D47A1</color>
+    <color name="green_dark">#1B5E20</color>
+    <color name="yellow_dark">#F57F17</color>
+    <color name="orange_dark">#E65100</color>
+    <color name="brown_dark">#3E2723</color>
+    <color name="black_dark">#000000</color>
+    <array name="vehicles_dark_colors">
+        <item>@color/colorTextIcons</item>
+        <item>@color/red_dark</item>
+        <item>@color/pink_dark</item>
+        <item>@color/purple_dark</item>
+        <item>@color/blue_dark</item>
+        <item>@color/green_dark</item>
+        <item>@color/yellow_dark</item>
+        <item>@color/orange_dark</item>
+        <item>@color/brown_dark</item>
+        <item>@color/colorPrimaryText</item>
+        <item>@color/black_dark</item>
+    </array>
+
     <!--Welcome screens background colors-->
     <color name="colorWelcome1">#F57C00</color>
     <color name="colorWelcome2">#8BC34A</color>
