--- a/app/src/main/res/layout/content_new_vehicle.xml
+++ b/app/src/main/res/layout/content_new_vehicle.xml
@@ -129,27 +129,29 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <EditText
-            android:focusable="false"
-            android:cursorVisible="false"
-            android:id="@+id/et_vehicle_color"
+        <TextView
+            android:gravity="center_vertical"
+            android:paddingStart="4dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:text="@string/select_color"
             android:onClick="colorPicker"
-            android:layout_width="0dp"
             android:layout_weight="1"
+            android:layout_width="0dp"
             android:layout_height="wrap_content" />
 
-        <View
-            android:layout_marginStart="@dimen/activity_vertical_margin"
-            android:id="@+id/view_new_vehicle_color"
+        <Button
+            android:id="@+id/btn_new_vehicle_color"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:background="@color/blue"
             android:onClick="colorPicker"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="40dp"
-            android:background="@drawable/shape_vehicle_color"/>
+            android:layout_height="40dp" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/ll_new_vehicle_fuel_tanks"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -157,7 +159,9 @@
 
     <Button
         android:id="@+id/btn_new_vehicle_add_ft"
-        android:background="@color/colorAccent"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:background="@color/colorPrimaryLight"
+        style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/add_fuel_tank"/>
