--- a/app/src/main/res/layout/content_new_refueling.xml
+++ b/app/src/main/res/layout/content_new_refueling.xml
@@ -19,7 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <android.support.design.widget.TextInputLayout
+        <!--<android.support.design.widget.TextInputLayout
             android:id="@+id/til_new_refueling_date"
             android:layout_width="0dp"
             android:layout_weight="2"
@@ -30,7 +30,12 @@
                 android:hint="@string/date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
-        </android.support.design.widget.TextInputLayout>
+        </android.support.design.widget.TextInputLayout>-->
+
+        <include layout="@layout/til_date"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"/>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/til_new_refueling_time"
@@ -52,7 +57,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-    <android.support.design.widget.TextInputLayout
+    <include layout="@layout/til_odometer" />
+    <!--<android.support.design.widget.TextInputLayout
         android:id="@+id/til_new_refueling_odometer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -64,10 +70,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/odometer"/>
-    </android.support.design.widget.TextInputLayout>
+    </android.support.design.widget.TextInputLayout>-->
 
     <TextView
-        android:id="@+id/tv_new_refueling_last_odometer"
+        android:id="@+id/tv_new_refueling_current_odometer"
         android:layout_gravity="center_horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
@@ -117,7 +123,8 @@
             android:hint="@string/price"/>
     </android.support.design.widget.TextInputLayout>
 
-    <android.support.design.widget.TextInputLayout
+    <include layout="@layout/til_note" />
+    <!--<android.support.design.widget.TextInputLayout
         android:id="@+id/til_new_refueling_notes"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -129,5 +136,5 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/notes"/>
-    </android.support.design.widget.TextInputLayout>
+    </android.support.design.widget.TextInputLayout>-->
 </LinearLayout>
