--- a/app/src/main/res/layout/content_new_service.xml
+++ b/app/src/main/res/layout/content_new_service.xml
@@ -19,7 +19,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <android.support.design.widget.TextInputLayout
+        <include layout="@layout/til_date"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"/>
+
+ <!--       <android.support.design.widget.TextInputLayout
             android:id="@+id/til_new_service_date"
             android:layout_width="0dp"
             android:layout_weight="2"
@@ -30,7 +35,7 @@
                 android:hint="@string/date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
-        </android.support.design.widget.TextInputLayout>
+        </android.support.design.widget.TextInputLayout>-->
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/til_new_service_time"
@@ -46,7 +51,70 @@
         </android.support.design.widget.TextInputLayout>
     </LinearLayout>
 
+    <TextView
+        android:text="@string/select_notification_method"
+        android:gravity="center_horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <ToggleButton
+        android:id="@+id/toggle_btn_new_service"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textOn="@string/by_date"
+        android:textOff="@string/by_odometer"/>
+
     <android.support.design.widget.TextInputLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/til_odometer_notification"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.design.widget.TextInputEditText
+            android:inputType="number"
+            android:maxLines="1"
+            android:maxLength="16"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/target_odometer"/>
+    </android.support.design.widget.TextInputLayout>
+
+    <LinearLayout
+        android:id="@+id/ll_date_time_notification"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/til_new_service_notification_date"
+            android:layout_width="0dp"
+            android:layout_weight="2"
+            android:layout_height="wrap_content">
+            <android.support.design.widget.TextInputEditText
+                android:focusable="false"
+                android:cursorVisible="false"
+                android:hint="@string/notification_date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/til_new_service_notification_time"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content">
+            <android.support.design.widget.TextInputEditText
+                android:focusable="false"
+                android:cursorVisible="false"
+                android:hint="@string/notification_time"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </android.support.design.widget.TextInputLayout>
+    </LinearLayout>
+
+    <include layout="@layout/til_odometer" />
+
+   <!-- <android.support.design.widget.TextInputLayout
         android:id="@+id/til_new_service_odometer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -58,10 +126,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/odometer"/>
-    </android.support.design.widget.TextInputLayout>
+    </android.support.design.widget.TextInputLayout>-->
 
     <TextView
-        android:id="@+id/tv_new_service_last_odometer"
+        android:id="@+id/tv_new_service_current_odometer"
         android:layout_gravity="center_horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
@@ -92,7 +160,9 @@
             android:hint="@string/price"/>
     </android.support.design.widget.TextInputLayout>
 
-    <android.support.design.widget.TextInputLayout
+    <include layout="@layout/til_note" />
+
+    <!--<android.support.design.widget.TextInputLayout
         android:id="@+id/til_new_service_notes"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -104,5 +174,5 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/notes"/>
-    </android.support.design.widget.TextInputLayout>
+    </android.support.design.widget.TextInputLayout>-->
 </LinearLayout>
