--- a/app/src/main/res/layout/content_view_vehicle.xml
+++ b/app/src/main/res/layout/content_view_vehicle.xml
@@ -16,18 +16,6 @@
         android:layout_height="match_parent"
         android:layout_width="wrap_content">
 
-        <!--<android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_view_vehicle"
-            android:layout_marginStart="@dimen/activity_horizontal_margin"
-            android:layout_marginEnd="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            android:layout_height="match_parent"
-            android:layout_width="match_parent"
-            tools:context="stoyanov.valentin.mycar.activities.ViewVehicleActivity"
-            tools:showIn="@layout/activity_view_vehicle"/>-->
-
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
@@ -59,7 +47,6 @@
                 android:textColor="@color/colorPrimaryText"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:gravity="center_horizontal"
-                android:text="asdadsd"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content" />
@@ -69,7 +56,6 @@
                 android:textColor="@color/colorPrimaryText"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:gravity="center_horizontal"
-                android:text="asdadsd"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content" />
@@ -94,7 +80,6 @@
             android:textColor="@color/colorPrimaryText"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:gravity="center_horizontal"
-            android:text="asdadsd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
@@ -117,7 +102,6 @@
             android:textColor="@color/colorPrimaryText"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:gravity="center_horizontal"
-            android:text="asdadsd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
@@ -159,7 +143,6 @@
                 android:textColor="@color/colorPrimaryText"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:gravity="center_horizontal"
-                android:text="asdadsd"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content" />
@@ -169,7 +152,6 @@
                 android:textColor="@color/colorPrimaryText"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:gravity="center_horizontal"
-                android:text="asdadsd"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content" />
@@ -194,7 +176,6 @@
             android:textColor="@color/colorPrimaryText"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:gravity="center_horizontal"
-            android:text="asdadsd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
@@ -217,12 +198,23 @@
             android:textColor="@color/colorPrimaryText"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:gravity="center_horizontal"
-            android:text="asdadsd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <View
             android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:background="@color/colorDivider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"/>
+
+        <LinearLayout
+            android:id="@+id/ll_view_vehicle_fuel_tanks"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <View
             android:layout_marginBottom="@dimen/activity_vertical_margin"
             android:background="@color/colorDivider"
             android:layout_width="match_parent"
@@ -242,7 +234,6 @@
             android:textColor="@color/colorPrimaryText"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:gravity="center_horizontal"
-            android:text="asdadsd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
         
