--- a/app/src/main/res/layout/row_view_fuel_tank.xml
+++ b/app/src/main/res/layout/row_view_fuel_tank.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:layout_marginBottom="@dimen/activity_vertical_margin"
+    android:layout_marginStart="@dimen/activity_horizontal_margin"
+    android:layout_marginEnd="@dimen/activity_horizontal_margin"
     android:layout_height="wrap_content">
 
     <ImageView
@@ -16,8 +19,7 @@
         android:layout_toEndOf="@id/imgv_row_view_ft_fuel_type"
         android:paddingStart="@dimen/activity_horizontal_margin"
         android:text="@string/fuel_tank"
-        android:textSize="16sp"
-        android:textColor="@color/colorPrimaryText"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
@@ -25,9 +27,9 @@
         android:paddingStart="@dimen/activity_horizontal_margin"
         android:id="@+id/tv_row_view_ft_fuel_type"
         android:layout_below="@id/id_tv_row_view_ft_fuel_tank"
-        android:textSize="14sp"
+        android:textColor="@color/colorPrimaryText"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:layout_toEndOf="@id/imgv_row_view_ft_fuel_type"
-        android:textColor="@color/colorSecondaryText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
@@ -35,9 +37,9 @@
         android:paddingStart="@dimen/activity_horizontal_margin"
         android:id="@+id/tv_row_view_ft_capacity"
         android:layout_below="@id/tv_row_view_ft_fuel_type"
-        android:textSize="14sp"
+        android:textColor="@color/colorPrimaryText"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:layout_toEndOf="@id/imgv_row_view_ft_fuel_type"
-        android:textColor="@color/colorSecondaryText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
@@ -45,9 +47,9 @@
         android:paddingStart="@dimen/activity_horizontal_margin"
         android:layout_toEndOf="@id/imgv_row_view_ft_fuel_type"
         android:id="@+id/tv_row_view_ft_consumption"
-        android:textSize="14sp"
         android:layout_below="@id/tv_row_view_ft_capacity"
-        android:textColor="@color/colorSecondaryText"
+        android:textColor="@color/colorPrimaryText"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </RelativeLayout>
