--- a/app/src/main/res/layout/activity_new_vehicle.xml
+++ b/app/src/main/res/layout/activity_new_vehicle.xml
@@ -7,7 +7,8 @@
     android:fitsSystemWindows="true"
     tools:context="stoyanov.valentin.mycar.activities.NewVehicleActivity">
 
-    <android.support.design.widget.AppBarLayout
+    <include layout="@layout/toolbar_save" />
+<!--    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
@@ -19,7 +20,7 @@
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-    </android.support.design.widget.AppBarLayout>
+    </android.support.design.widget.AppBarLayout>-->
 
    <ScrollView
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
