--- a/app/src/main/res/layout/content_new_service.xml
+++ b/app/src/main/res/layout/content_new_service.xml
@@ -141,6 +141,11 @@
 
         <AutoCompleteTextView
             android:id="@+id/actv_new_service_type"
+            android:popupBackground="@color/colorAccent"
+            android:inputType="textCapSentences|textAutoComplete"
+            android:completionThreshold="1"
+            android:maxLength="32"
+            android:maxLines="1"
             android:hint="@string/service_type"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
