--- a/app/src/main/res/layout/row_new_fuel_tank.xml
+++ b/app/src/main/res/layout/row_new_fuel_tank.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_marginTop="@dimen/activity_vertical_margin"
-    android:id="@+id/ll_row_new_fuel_tank"
+    android:id="@+id/rl_row_new_fuel_tank"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <LinearLayout
+        android:layout_alignParentStart="true"
         android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
@@ -34,10 +34,11 @@
     </LinearLayout>
 
     <ImageButton
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
         android:id="@+id/img_btn_remove"
-        android:layout_gravity="center_vertical"
         android:background="@null"
         android:src="@drawable/ic_clear_black_24dp"
         android:layout_width="24dp"
         android:layout_height="24dp" />
-</LinearLayout>
+</RelativeLayout>
