--- a/app/src/main/res/layout/content_new_insurance.xml
+++ b/app/src/main/res/layout/content_new_insurance.xml
@@ -105,6 +105,30 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <LinearLayout
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <Spinner
+            android:id="@+id/spn_new_insurance_company_name"
+            android:popupBackground="@color/colorAccent"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:layout_height="wrap_content" />
+
+        <ImageButton
+            android:layout_weight="1"
+            android:layout_gravity="end"
+            android:id="@+id/img_btn_add_company"
+            android:background="@null"
+            android:src="@drawable/ic_add_circle_outline_black_24dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp" />
+    </LinearLayout>
+
     <android.support.design.widget.TextInputLayout
         android:id="@+id/til_new_insurance_price"
         android:layout_width="match_parent"
