--- a/app/src/main/res/layout/slide_welcome3.xml
+++ b/app/src/main/res/layout/slide_welcome3.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorWelcome3"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -14,7 +16,7 @@
             android:scaleType="fitXY"
             android:layout_width="@dimen/img_size"
             android:layout_height="@dimen/img_size"
-            android:src="@drawable/ic_statistics_black"
+            app:srcCompat="@drawable/ic_statistics_black"
             android:tint="@color/colorTextIcons"/>
 
         <TextView
