--- a/app/src/main/res/layout/activity_view_vehicle.xml
+++ b/app/src/main/res/layout/activity_view_vehicle.xml
@@ -35,6 +35,13 @@
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/AppTheme.PopupOverlay" />
 
+            <ProgressBar
+                android:layout_gravity="bottom"
+                android:id="@+id/pb_view_vehicle_export_bluetooth"
+                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                android:indeterminate="false"
+                android:layout_width="match_parent"
+                android:layout_height="3dp" />
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
