--- a/app/src/main/res/menu/fab_speed_dial_menu.xml
+++ b/app/src/main/res/menu/fab_speed_dial_menu.xml
@@ -12,10 +12,10 @@
         android:id="@+id/action_add_expense"
         android:icon="@drawable/ic_menu_expense"
         android:title="Expense" />
-    <item
+<!--    <item
         android:id="@+id/action_add_reminder"
         android:icon="@drawable/ic_menu_reminder"
-        android:title="Reminder" />
+        android:title="Reminder" />-->
     <item
         android:id="@+id/action_add_refueling"
         android:icon="@drawable/ic_menu_refueling"
